--- a/java/tools/git/learnGitBranching.org
+++ b/java/tools/git/learnGitBranching.org
@@ -66,7 +66,7 @@ Git主要命令
 
 * 高级篇
   :LOGBOOK:
-  CLOCK: [2018-04-17 周二 14:08]
+  CLOCK: [2018-04-17 周二 14:08]--[2018-04-17 周二 15:23] =>  1:15
   :END:
 
 Git一些炫酷的特性
