--- a/java/framework/myBatis.org
+++ b/java/framework/myBatis.org
@@ -69,6 +69,9 @@
 + 更新数据
   + 使用pojo对象进行更新
   + commit
++ 配置链接
+  + 时间不匹配
+  + ~jdbc:mysql://localhost:3306/mytestforjava?serverTimezone=UTC&amp;useUnicode=true&amp;characterEncoding=utf-8~
 
 * DAO的开发方法
 
