--- a/java/framework/myBatis.org
+++ b/java/framework/myBatis.org
@@ -225,3 +225,33 @@
 + [ ] 疑问 [0/2]
   + [ ] 如何从泛型转为数组的？肯定是反射机制
   + [ ] pojo与dao的使用区别是什么
+
+* 结构整理
+
+1. 加依赖
+2. 添加配置文件
+   1. SQLMapConfig
+      1. 设置事务管理器
+      2. 设置数据库连接池
+3. 添加pojo与对应的映射文件
+   1. User.java
+   2. User.xml
+4. 执行查询
+5. 读取核心配置文件，创建会话工厂，从工厂拿到会话
+
+** 正规方式
+
+1. 创建Dao接口与实现
+   1. 将工厂注入到dao中
+   2. sqlSession线程不安全，所以使用范围为方法体内
+2. 动态代理方式
+   1. 创建UserMapper.xml和.java
+      1. 在同一个文件中
+   2. 规则
+      1. namespace为接口全路径
+      2. sql的id为方法名
+      3. 传入参数类型与方法一致
+      4. 返回类型也一致
+      5. 引入文件通过类的全路径引入
+   3. 使用
+      1. 可以通过sqlSession.getMapper直接获取实例
