论文进度整理以及访问控制部分的梳理

--- a/paper/process.org
+++ b/paper/process.org
@@ -2,3 +2,63 @@
 
 + NDN Video
   + 先看看如何做实验
+
+
+* 筛选          
+
+** [-] 基于NDN的直播 [0/4]
+*** [-] RTC中提及的 [2/5]
+**** [X] 可伸缩性                                             :放弃:难以实现:
+***** 基于RTC协议,在实际场景中是否可以稳定的提供视频服务
+**** [ ] 自适应速率控制
+***** 偏向于客户端的机制
+***** 看是否可以自动调节
+***** 不过这应该是有了体系之后需要考虑的问题
+**** [X] 音频优先级                                           :放弃:难以实现:
+***** 看不到研究点
+**** [ ] 消费者同步
+***** 需要转向研究视频会议
+****** 在视频会议包含官方应用的情况下难以入围
+**** [ ] 基于加密的访问控制
+***** 主要是对于视频会议的保密性而言
+*** [ ] 控制访问
+*** [ ] 安全
+*** [ ] 转发
+** [ ] 基于NDN的DNS [0/2]
+*** [ ] DNS应该可以实现
+**** 即使官方有已经成型的NDNS,如果解决的问题不同还是没有问题的
+***** 官方解决的是:跨域,统一的权限管理
+*** [ ] 实现的意义在于什么 [0/4]
+**** TODO 增加一个代理服务器
+***** TODO 好处
+****** 将生产者消费者的命名方式与网络解耦
+***** TODO 坏处
+****** 增加查询过程
+****** 使查询复杂化,因为需要增加缓存
+**** TODO 将命名扁平化
+**** TODO 将命名等长                                          :放弃:意义不大:
+***** 名字等长后的查询效率未必提高
+***** 这是属于匹配.并不是查找
+***** 匹配可以直接通过长度来判断是否合适
+****** 不可以,因为是最长前缀
+***** 等长的名字如何匹配最长前缀
+****** 最好的方法时计算出来
+***** TODO 实际上兴趣包在路由过程中全名并不是都有意义              :查询算法还是比较吃力的:
+****** 那么是否有必要添加一个路由长度的字段用于查询路由呢
+******* 有必要
+******** 直觉上有一个会很好
+******* DONE 没有必要 : 觉得没有必要
+******** 实际上查询的时候依据的是FIB的前缀命,前缀必然是短的
+*** TODO 发布与删除带来的路由更新操作
+**** 通过代理的方式解决么
+***** 发布与删除可以容忍滞后么?
+*** TODO 命名的问题在于这么多的名字如何进行管理
+*** TODO 如果有意义的话,那可以做什么呢
+**** 通过DHT映射名字,做查询
+**** 服务器的对于名字的管理
+**** 维护名字的唯一性 [/]
+***** 这个如何保证呢?
+****** 问题是在于没有资料表明名字的唯一性是一个问题
+****** 另一个问题在于有解决方案么
+** [ ] 基于NDN的VaNet [0/0]
+** [ ] 生产者移动
