修改IO学习进度

--- a/java/base/IO.org
+++ b/java/base/IO.org
@@ -291,26 +291,28 @@
 
 ** IO练习
 
-+ [ ] IO [0/3]
-  + [ ] 字节流 [0/2]
-    + [ ] 基本拷贝的三种形式
-    + [ ] 提供的快速拷贝
-  + [ ] 字符流 [0/5]
-    + [ ] 文件拷贝
-    + [ ] 逐行拷贝
-    + [ ] 拷贝行号
-    + [ ] 编码拷贝
-    + [ ] 处理同一个文件
-  + [ ] 其他流 [0/7]
-    + [ ] 多个同时拷贝
-    + [ ] 读取到内存
-    + [ ] 对象序列化与反序列化
-    + [ ] 修改输入输出源
-    + [ ] 多线程读写文件
-    + [ ] 按照基本数据类型大小读写
-    + [ ] 输入输出配置文件
-+ [ ] 文件 [0/4]
-  + [ ] 统计文件夹大小
-  + [ ] 层级打印
-  + [ ] 拷贝文件夹
-  + [ ] 删除拷贝的文件夹
++ [-] IO [2/3]
+  + [X] 字节流 [2/2]
+    + [X] 基本拷贝的三种形式
+    + [X] 提供的快速拷贝
+  + [X] 字符流 [5/5]
+    + [X] 文件拷贝
+    + [X] 逐行拷贝
+    + [X] 拷贝行号
+    + [X] 编码拷贝
+    + [X] 处理同一个文件
+  + [-] 其他流 [6/7]
+    + [X] 多个同时拷贝
+    + [X] 读取到内存
+    + [X] 对象序列化与反序列化
+    + [X] 修改输入输出源
+    + [ ] 多线程读写文件 TODO
+      + [ ] 线程池
+      + [ ] 线程结束回调
+    + [X] 按照基本数据类型大小读写
+    + [X] 输入输出配置文件
++ [X] 文件 [4/4]
+  + [X] 统计文件夹大小
+  + [X] 层级打印
+  + [X] 拷贝文件夹
+  + [X] 删除拷贝的文件夹
