学习第三章,后面实在看不下去了,准备跳过去.关于不可变对象与安全发布以后再看吧

--- a/reading/Java Concurrency in Practice.org
+++ b/reading/Java Concurrency in Practice.org
@@ -30,3 +30,42 @@
     + 所以以上三个,1为通过线程安全类消除了竞态条件
     + 2为通过同步代码块消除了竞态条件
     + 3为通过同步代码块消除了竞态条件
+
+** DONE 总结
+
+1. 产生线程安全的三个要素:共享,可变状态与竞态条件,竞态条件是关键
+2. 要解决线程安全问题,可以取消共享,消除可变状态,或者使用同步,也就是消除竞态条件
+3. 解决线程安全问题
+   1. 存在一个变态时,如果方法中存在一个竞态条件时,将变态变为线程安全类,即可消除竞态条件
+   2. 存在多个变态时,需要使用同步块来消除竞态条件
+   3. 即使使用线程安全类,在调用不同线程安全方法的时候也可能产生竞态条件,也需要使用同步块进行消除
+4. 竞态条件
+   1. 读取-修改-存入
+   2. 先检查后执行
+
+* TODO 第三章 对象的共享
+
++ 同步除了为了保护线程安全,还可以解决内存可见
+  + 就是当一个线程修改了一个数据之后,其他线程可以立即看到修改后的结果
++ 命令重排导致数据失效
+  + 数据失效只是读取的是旧数据,属于最低安全保证
+  + 但如果时非volatile修饰的64位变量(double与long)则没有最低安全保证
+    + 普通32位变量的写入操作是原子性的,但64位分为了2个32位进行操作,所以读取的值可能是完全没见过的值
++ 失效数据
+  + 失效数据就是某个线程修改了数据,但是其他线程读取时读到的并不是修改后的数据,这个时候数据就失效了
+  + 通过volatile可以将变量变为内存可见数据,当一个线程修改之后,及时对其他线程进行同步
+  + volatile修饰的变量是一种轻量级的锁
+    + 读取这个变量表示获取到了锁
+    + 写入这个变量表示释放了锁
+    + 因为其他线程读到这个变量时,也可以读到写入这个变量之前所有修改过的变量
+      + 只有读到时才算是获得了锁
+  + volatile只能确保可见性,无法确保原子性
+  
+  + 引用逸出
+    + 就是类中的成员引用被外部的类获取
+  + this逸出
+    + 指的是在构造阶段this被外部对象获取到(如注册到某个主题下)
+      + 是由于这个时候该对象可能还没有完全构造完成
+      + 所以需要通过工厂方式,将构造方法与注册方法隔离开来(P34)
++ 另一种解决线程安全的方案
+  + 封装多个变态为一个不变态对象,从而消除竞态条件
